<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:background="#F00"
        android:layout_marginLeft="245dp"
        android:layout_width="3dp"
        android:layout_height="match_parent"/>

    <View
        android:background="#0F0"
        android:layout_marginLeft="112dp"
        android:layout_width="3dp"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <Switch
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/always_allow_wi_fi_roam_scans" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_google_play_services" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install" />

        <Button
            android:textAlignment="viewStart"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="Meetup" />

        <Button
            android:gravity="left|center_vertical"
            android:id="@+id/logcatButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_gravity="left"
            android:text="Left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</FrameLayout>